pi4-cluster/monitoring/kube-prometheus-stack/vs-grafana.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.milton.mcf.io
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - grafana.milton.mcf.io
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 80
